infrastructure/frontend-nextjs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nextjs
        image: ghcr.io/returntesha/whois/frontend-nextjs:v0.5
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
